[SERVER] Handled preflight for FileEndpoint and FileDataEndpoint
